@@ -1,3 +1,7 @@
+2005-02-09  Jean-Louis Martineau <martineau@iro.umontreal.ca>
+
+        * server-src/planner.c: Improve message if no incremental estimate.
+
 2004-12-21  Jean-Louis Martineau <martineau@iro.umontreal.ca>
 	Patch by Christopher Pascoe <c.pascoe@itee.uq.edu.au>
 
